# lsimons-template-rs

./: .gitignore  .mise.toml  AGENTS.md  Cargo.toml  README.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/spec/: 000-shared-patterns.md
src/: lib.rs  main.rs
tests/: cli.rs
